--- a/html/g3.html
+++ b/html/g3.html
@@ -155,7 +155,7 @@
             
     </header>
     <br>
-    <img src="../images/casos confirmados e acumulados.jpg" id="imageGraf" class="gra" alt="" srcset="">
+    <img src="../images/3_confirmados_acumulados_dia_197.jpeg" id="imageGraf" class="gra" alt="" srcset="">
 
 
 
@@ -164,12 +164,10 @@
     <script>
 
     const arrayOfImagesCode = [
-        { index: 3, src: '../images/casos confirmados e acumulados.jpg' },
-        { index: 4, src: '../images/casos novos por dia.jpg' },
-        { index: 5, src: '../images/casos recuperados dentre os confirmados.png' },
-        { index: 6, src: '../images/c taxa de ocupacao.jpg' },
-        { index: 7, src: '../images/c obitos confirmados....jpg' },
-        { index: 8, src: '../images/c recuperados dentre....jpg' }]
+        { index: 1, src: '../images/3_confirmados_acumulados_dia_197.jpeg' },
+        { index: 2, src: '../images/3_obitos_confirmados_acumulados_dia_197.jpeg' },
+        { index: 3, src: '../images/3_novos_por_dia_dia_197.jpeg' },
+        { index: 4, src: '../images/3_novos_por_dia_dia_197.jpeg' }]
     var hash = window.location.hash.slice(1)
 
     const image = document.querySelector('#imageGraf')
