--- a/html/g.html
+++ b/html/g.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../images/image.jpg">
-    <title>Gráficos da COVID-19 em São Carlos</title>
+    <title>Covid-19 em São Carlos</title>
     <style>
         body {
             text-align: center;
